Unbind external buffers by re-binding a dummy texture to work around GL driver issues with unlocking (bug 774530, r=cjones).