gfx/gl/GLContext.h
@@ -742,6 +742,7 @@ public:
     void ApplyFilterToBoundTexture(gfxPattern::GraphicsFilter aFilter);
 
     virtual bool BindExternalBuffer(GLuint texture, void* buffer) { return false; }
+    virtual bool UnbindExternalBuffer(GLuint texture) { return false; }
 
     /*
      * Offscreen support API
